Overwrite CandidateList.html with functional version
modified backend to produce more information on searches
modify frontend to be single page based

--- a/var/www/csc342/CandidateList.css
+++ b/var/www/csc342/CandidateList.css
@@ -59,3 +59,13 @@ p {
 	margin-left: 150px;
 	color: #FFFFFF;
 }
+
+.candidate_btn {
+	background-color: #2275BB; 
+	color: #FFFFFF;
+}
+
+.position_btn {
+	background-color: #2275BB; 
+	color: #FFFFFF;
+}
